Misc configuration enhancements Windows build changes Changing ADDR2 field from QRZ to City

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ build/
 cmake-build-debug/
 cmake-build-release/
 CMakeUserPresets.json
+/.vs
+/dist
+/out/install/x64-Debug/bin
+/CMakeSettings.json
